[package]
name = "sharky"
version = "0.1.2"
edition = "2021"

authors = [
  "Hannes Körber <hannes@hkoerber.de>",
]
description = """
A small wrapper around sharks to handle Shamir's Secret
Sharing
"""

homepage = "https://github.com/hakoerber/sharky"
repository = "https://github.com/hakoerber/sharky"

readme = "README.md"

rust-version = "1.66"

license = "GPL-3.0-only"

[dependencies]
sharks = "0.4"
